# did

./: .gitignore  Cargo.toml  README.md  wapm.toml
did-core/: Cargo.toml
did-core/src/: did.rs  document.rs  lib.rs
did-helpers/: Cargo.toml
did-helpers/src/: lib.rs
did-helpers/src/utils/: generate_rsa_keypair.rs  generate_seed.rs
did-iota/: Cargo.toml
did-iota/src/: lib.rs  publisher.rs
examples/: Cargo.toml  create_did.rs  generate_ed25519_keypair.rs  generate_rsa_keypair.rs  generate_seed.rs  publish_did.rs
libraries/c/: README.md
libraries/go/: README.md
libraries/java/: README.md
libraries/python/: README.md
libraries/wasm/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
libraries/wasm/examples/: node.js  web.js
libraries/wasm/examples/svelte-app/: package.json  webpack.config.js
libraries/wasm/examples/svelte-app/src/: App.svelte
libraries/wasm/examples/web/: index.html  index.js  package-lock.json  package.json  webpack.config.js
libraries/wasm/src/: lib.rs
src/: lib.rs  main.rs
src/DID/: mod.rs
src/utils/: generate_ed25519_keypair.rs  generate_rsa_keypair.rs  mod.rs
