[package]
name = "did"
version = "0.0.1"
authors = ["huhn511 <huhn@einfachiota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "did"
path = "src/lib.rs"

[dependencies]
rand = "0.7.3"
openssl = "0.10.30"

[workspace]
exclude = [
    "libraries/c",
    "libraries/go",
    "libraries/java",
    "libraries/python",
    "libraries/wasm",
]