[package]
name = "did-helpers"
version = "0.0.1"
authors = ["huhn511 <huhn@einfachiota.de>"]
edition = "2018"
description = "Helper library of IOTA DID"
license = "MIT"

[lib]
name = "did_helpers"
path = "src/lib.rs"

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
ed25519-compact = "0.1"
bs58 = "0.3.1"
