[package]
name = "did-iota"
version = "0.0.1"
authors = ["huhn511 <huhn@einfachiota.de>"]
edition = "2018"
description = "IOTA library of IOTA DID"
license = "MIT"

[lib]
name = "did_iota"
path = "src/lib.rs"

[dependencies]
did-core = { version = "0.0.1", path = "../did-core" }
iota-core = { git = "https://github.com/iotaledger/iota.rs" }
iota-conversion = "0.5.1"