[package]
name = "examples"
version = "0.0.1"
authors = ["huhn511 <huhn@einfachiota.de>"]
edition = "2018"
publish = false

[dev-dependencies]
did-core = { path = "../did-core" }
did-helpers = { path = "../did-helpers" }
did-iota = { path = "../did-iota" }
smol = {version = "0.1.18", features = ["tokio02"] }
smol-potat = "0.3.1"

[[example]]
name = "generate_seed"
path = "generate_seed.rs"

[[example]]
name = "generate_rsa_keypair"
path = "generate_rsa_keypair.rs"

[[example]]
name = "generate_ed25519_keypair"
path = "generate_ed25519_keypair.rs"

[[example]]
name = "create_did"
path = "create_did.rs"

[[example]]
name = "publish_did"
path = "publish_did.rs"